--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                         <i class="fab fa-youtube"></i>
                     </a>
                     -->
-                    <a class="text-primary px-2" href="https://twitter.com/drwillsouto">
+                    <a class="text-primary px-2" href="https://twitter.com/drwillsouto" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a> 
-                    <a class="text-primary px-2" href="https://www.linkedin.com/in/willsouto/">
+                    <a class="text-primary px-2" href="https://www.linkedin.com/in/willsouto/" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a class="text-primary px-2" href="https://www.instagram.com/drwillsouto/">
+                    <a class="text-primary px-2" href="https://www.instagram.com/drwillsouto/" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
                     
@@ -69,7 +69,7 @@
     <!-- Navbar Start -->
     <div class="container-fluid p-0 navbarcontainer">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <a href="index.html" class="navbar-brand ml-lg-3">
+            <a href="/" class="navbar-brand ml-lg-3">
                 <img alt="" src="img/f2.png" class="logo">
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -560,10 +560,10 @@
                                 <p class="m-0">Terapeuta manual, integrativo, instrutor de pilates &<br>graduando em fisioterapia</p>
                             </div>
                             <div class="team-social bg-dark text-center">
-                                <a class="btn btn-outline-primary btn-square mr-2" href="https://twitter.com/drwillsouto"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-outline-primary btn-square mr-2" href="https://twitter.com/drwillsouto" target="_blank"><i class="fab fa-twitter"></i></a>
                                 <!--<a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>-->
-                                <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/willsouto/"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/drwillsouto/"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/willsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -632,7 +632,7 @@
         <div class="container pt-5">
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-5">
-                    <a href="index.html" class="navbar-brand">
+                    <a href="/" class="navbar-brand">
                         <img alt="" src="img/ff1.png" class="img-fluid w-100 lfooter mb-3">
                     </a>
                     <p>Tratamento com seriedade, individualidade e dedicação para o seu bem-estar. <br>Experimente nossas terapias e descubra os benefícios para relaxamento e saúde.</p>
@@ -640,10 +640,10 @@
                     <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
                     <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
                     <div class="d-flex justify-content-start mt-4">
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://twitter.com/drwillsouto"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://twitter.com/drwillsouto" target="_blank"><i class="fab fa-twitter"></i></a>
                        <!-- <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.linkedin.com/in/willsouto/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square" href="https://www.instagram.com/drwillsouto/"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.linkedin.com/in/willsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 pl-lg-5">
@@ -690,10 +690,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-                    <p class="m-0 text-white">&copy; <a href="#">https://drwill.com.br/</a>. Todos os direitos reservados.</p>
+                    <p class="m-0 text-white">&copy; <a href="/">https://drwill.com.br/</a>. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
-                    <p class="m-0 text-white">Desenvolvido por <a href="https://htmlcodex.com">William Souto & HTML Codex</a></p>
+                    <p class="m-0 text-white">Desenvolvido por William Souto & HTML Codex</p>
                 </div>
             </div>
         </div>
