--- a/contato.html
+++ b/contato.html
@@ -176,7 +176,7 @@
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/willsouto/" target="_blank"> @willsouto</a></p>
         </div>
         <div class="header_svg_item">
-          <a href="https://drwill.com.br/files/Contato%20Dr%20Will.vcf" rel="nofollow" target="_top">
+          <a href="files/Contato%20Will%20Souto.vcf" rel="nofollow" target="_top">
             <img src="img/QRcartaocontato.png" /> <p>Cartão de contato</p>
           </a>
         </div>
