--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
-                    <a href="/" class="nav-item nav-link">Home</a>
+                    <a href="/" class="nav-item nav-link active">Home</a>
                     <a href="sobre" class="nav-item nav-link">Sobre</a>
                     <a href="servicos" class="nav-item nav-link">Serviços</a>
                     <a href="preco" class="nav-item nav-link">Preços</a>
@@ -119,7 +119,7 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div>-->
-                    <a href="contato.html" class="nav-item nav-link active">Contato</a>
+                    <a href="contato.html" class="nav-item nav-link ">Contato</a>
                 </div>
                 <a href="" class="btn btn-primary d-none d-lg-block">Agendar</a>
             </div>
