--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massagem Sueca (Clássica)</h3>
                             <p class="mx-md-5 px-5">Revitalize-se com a Massagem Sueca, a chave para o seu equilíbrio e bem-estar. Deixe o estresse para trás com essa técnica que tem como intuito relaxar seus músculos, melhorar a circulação e proporcionar uma sensação de profundo relaxamento.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Conceito Rolf e Deep Tissue)</span></h3>
                             <p class="mx-md-5 px-5">Desbloqueie seu potencial físico com a Liberação Miofascial. Reduza dores, melhore a função muscular e promova uma recuperação eficaz. </p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massage Relaxante</h3>
                             <p class="mx-md-5 px-5">Revitalize seu corpo e mente com nossa Massagem Relaxante. Desperte uma sensação de tranquilidade, alívio do estresse e renovação completa.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -179,7 +179,18 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Drenagem Linfática</h3>
                             <p class="mx-md-5 px-5">Experimente a Drenagem Linfática, uma técnica comprovada para reduzir o inchaço, promover a desintoxicação e melhorar a circulação. Sinta-se revitalizado e com uma sensação de leveza em seu corpo.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item position-relative" style="min-height: 100vh;">
+                    <img class="position-absolute w-100 h-100" src="img/carousel-3.jpg" style="object-fit: cover;">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
+                            <h3 class="display-3 text-capitalize text-white mb-3">Pedras quentes</h3>
+                            <p class="mx-md-5 px-5">Pedras aquecidas cuidadosamente colocadas em pontos estratégicos do corpo e usadas para massagear suavemente os músculos, proporcionando alívio de tensões e melhorando a circulação. Deixe-se envolver pelo calor terapêutico das pedras e sinta uma profunda sensação de calma e bem-estar. </p>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -190,7 +201,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Integrativas</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Ventosaterapia</h3>
                             <p class="mx-md-5 px-5">Descubra a antiga arte da Ventosaterapia e experimente seus benefícios terapêuticos. As ventosas são aplicadas estrategicamente para promover a circulação sanguínea, aliviar a tensão muscular e melhorar a saúde geral. Libere as toxinas e encontre alívio natural com a Ventosaterapia.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
