--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                 <li data-target="#header-carousel" data-slide-to="2"></li>
                 <li data-target="#header-carousel" data-slide-to="3"></li>
                 <li data-target="#header-carousel" data-slide-to="4"></li>
+                <li data-target="#header-carousel" data-slide-to="5"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item position-relative" style="min-height: 100vh;">
@@ -184,7 +185,7 @@
                     </div>
                 </div>
                 <div class="carousel-item position-relative" style="min-height: 100vh;">
-                    <img class="position-absolute w-100 h-100" src="img/carousel-3.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/carousel-3.jpg" style="object-fit: cover;object-position: top;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
@@ -195,7 +196,7 @@
                     </div>
                 </div>
                 <div class="carousel-item position-relative" style="min-height: 100vh;">
-                    <img class="position-absolute w-100 h-100" src="img/ventosabig.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/ventosabig.jpg" style="object-fit: cover;object-position: 0 37%;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Integrativas</h6>
