--- a/sobre.html
+++ b/sobre.html
@@ -155,6 +155,7 @@
                     
 
                     </p>
+                    <div class="container py-5">
                     <h1>Currículo</h1>
                     <a href="https://lattes.cnpq.br/2388059456660725" class="btn btn-primary mt-2" target="_blank">Acessar currículo atualizado</a>
                     
@@ -217,7 +218,7 @@ Extensão universitária em Liga Acadêmica de Pesquisa Científica (LAPC).
 Faculdade de Medicina do ABC, FMABC, Brasil.
 
 Extensão universitária em Liga Acadêmica Multidisciplinar de Terapias Integrativas (LAMTI).
-Faculdade de Medicina do ABC, FMABC, Brasil.</p>
+                        Faculdade de Medicina do ABC, FMABC, Brasil.</p></div>
                 </div>
             </div>
         </div>
