--- a/sobre.html
+++ b/sobre.html
@@ -171,7 +171,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5"> Extensão universitária em Diretoria da Liga Acadêmica de Atenção ao Paciente Oncológico (LAAPO). <br class="clear">Faculdade de Medicina do ABC, FMABC, Brasil.
+<div class="layout-cell-pad-5"> Extensão universitária em Diretoria da Liga Acadêmica de Atenção ao Paciente Oncológico (LAAPO). <br class="clear">- Faculdade de Medicina do ABC, FMABC, Brasil.
 		
 	</div>
 </div>
@@ -181,7 +181,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Treinamento de Coluna Vertebral, da Teoria à Prática.  (Carga horária: 12h). <br class="clear">Instituto Fisiologic, IF, Brasil.
+<div class="layout-cell-pad-5">Treinamento de Coluna Vertebral, da Teoria à Prática.  (Carga horária: 12h). <br class="clear">- Instituto Fisiologic, IF, Brasil.
 		
 	</div>
 </div>
@@ -191,7 +191,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Curso de massagem sueca.  (Carga horária: 50h). <br class="clear">Bergqvist, BMF, Brasil.
+<div class="layout-cell-pad-5">Curso de massagem sueca.  (Carga horária: 50h). <br class="clear">- Bergqvist, BMF, Brasil.
 		
 	</div>
 </div>
@@ -201,7 +201,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Auriculoterapia.  (Carga horária: 40h). <br class="clear">Centro Educacional Sete de Setembro, CESS, Brasil.
+<div class="layout-cell-pad-5">Auriculoterapia.  (Carga horária: 40h). <br class="clear">- Centro Educacional Sete de Setembro, CESS, Brasil.
 		
 	</div>
 </div>
@@ -211,7 +211,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Curso de massagem relaxante.  (Carga horária: 14h). <br class="clear">Bergqvist, BMF, Brasil.
+<div class="layout-cell-pad-5">Curso de massagem relaxante.  (Carga horária: 14h). <br class="clear">- Bergqvist, BMF, Brasil.
 		
 	</div>
 </div>
@@ -221,7 +221,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Formação Espaço Vida Pilates.  (Carga horária: 42h). <br class="clear">VOLL PILATES GROUP, VOLL, Brasil.
+<div class="layout-cell-pad-5">Formação Espaço Vida Pilates.  (Carga horária: 42h). <br class="clear">- VOLL PILATES GROUP, VOLL, Brasil.
 		
 	</div>
 </div>
@@ -231,7 +231,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Educação em Dor: Aplicações Práticas.  (Carga horária: 5h). <br class="clear">Portal FisioemOrtopedia, PFO, Brasil.
+<div class="layout-cell-pad-5">Educação em Dor: Aplicações Práticas.  (Carga horária: 5h). <br class="clear">- Portal FisioemOrtopedia, PFO, Brasil.
 		
 	</div>
 </div>
@@ -241,7 +241,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Eletrotermofototerapia - Prof. Dr. Thiago Fukuda.  (Carga horária: 25h). <br class="clear">Instituto Cefisa, CEFISA, Brasil.
+<div class="layout-cell-pad-5">Eletrotermofototerapia - Prof. Dr. Thiago Fukuda.  (Carga horária: 25h). <br class="clear">- Instituto Cefisa, CEFISA, Brasil.
 		
 	</div>
 </div>
@@ -251,7 +251,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Curso de Quick massage.  (Carga horária: 7h). <br class="clear">Bergqvist, BMF, Brasil.
+<div class="layout-cell-pad-5">Curso de Quick massage.  (Carga horária: 7h). <br class="clear">- Bergqvist, BMF, Brasil.
 		
 	</div>
 </div>
@@ -261,7 +261,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Conceito ROLF de Liberação Miofascial.  (Carga horária: 24h). <br class="clear">Maria Eugênia Ortiz, MEO, Brasil.
+<div class="layout-cell-pad-5">Conceito ROLF de Liberação Miofascial.  (Carga horária: 24h). <br class="clear">- Maria Eugênia Ortiz, MEO, Brasil.
 		
 	</div>
 </div>
@@ -271,7 +271,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Auriculoterapia.  (Carga horária: 3h). <br class="clear">Faculdade de Medicina do ABC, FMABC, Brasil.
+<div class="layout-cell-pad-5">Auriculoterapia.  (Carga horária: 3h). <br class="clear">- Faculdade de Medicina do ABC, FMABC, Brasil.
 		
 	</div>
 </div>
@@ -281,7 +281,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Curso de drenagem linfática.  (Carga horária: 13h). <br class="clear">Bergqvist, BMF, Brasil.
+<div class="layout-cell-pad-5">Curso de drenagem linfática.  (Carga horária: 13h). <br class="clear">- Bergqvist, BMF, Brasil.
 		
 	</div>
 </div>
@@ -291,7 +291,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5"> Extensão universitária em Liga Acadêmica de Atenção ao Paciente Oncológico (LAAPO). <br class="clear">Faculdade de Medicina do ABC, FMABC, Brasil.
+<div class="layout-cell-pad-5"> Extensão universitária em Liga Acadêmica de Atenção ao Paciente Oncológico (LAAPO). <br class="clear">- Faculdade de Medicina do ABC, FMABC, Brasil.
 		
 	</div>
 </div>
@@ -301,7 +301,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Treinamento em Teleatendimento Musculoesquelético.  (Carga horária: 20h). <br class="clear">Portal FisioemOrtopedia, PFO, Brasil.
+<div class="layout-cell-pad-5">Treinamento em Teleatendimento Musculoesquelético.  (Carga horária: 20h). <br class="clear">- Portal FisioemOrtopedia, PFO, Brasil.
 		
 	</div>
 </div>
@@ -311,7 +311,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Mechanical Ventilation for COVID-19.  (Carga horária: 3h). <br class="clear">Harvard University, HARVARD, Estados Unidos.
+<div class="layout-cell-pad-5">Mechanical Ventilation for COVID-19.  (Carga horária: 3h). <br class="clear">- Harvard University, HARVARD, Estados Unidos.
 		
 	</div>
 </div>
@@ -321,7 +321,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Applied Behavioral Analysis(ABA) for Practitioners.  (Carga horária: 7h). <br class="clear">Dr Anna Budzinska, UDEMY, Polônia.
+<div class="layout-cell-pad-5">Applied Behavioral Analysis(ABA) for Practitioners.  (Carga horária: 7h). <br class="clear">- Dr Anna Budzinska, UDEMY, Polônia.
 		
 	</div>
 </div>
@@ -331,7 +331,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5">Estágio observatório de fisioterapia.  (Carga horária: 12h). <br class="clear">Hospital Estadual Mário Covas, HEMC, Brasil.
+<div class="layout-cell-pad-5">Estágio observatório de fisioterapia.  (Carga horária: 12h). <br class="clear">- Hospital Estadual Mário Covas, HEMC, Brasil.
 		
 	</div>
 </div>
@@ -341,7 +341,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5"> Extensão universitária em Liga Acadêmica de Reumatologia e Doenças Osteoarticulares (LARDO). <br class="clear">Faculdade de Medicina do ABC, FMABC, Brasil.
+<div class="layout-cell-pad-5"> Extensão universitária em Liga Acadêmica de Reumatologia e Doenças Osteoarticulares (LARDO). <br class="clear">- Faculdade de Medicina do ABC, FMABC, Brasil.
 		
 	</div>
 </div>
@@ -351,7 +351,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5"> Extensão universitária em Liga Acadêmica de Pesquisa Científica (LAPC). <br class="clear">Faculdade de Medicina do ABC, FMABC, Brasil.
+<div class="layout-cell-pad-5"> Extensão universitária em Liga Acadêmica de Pesquisa Científica (LAPC). <br class="clear">- Faculdade de Medicina do ABC, FMABC, Brasil.
 		
 	</div>
 </div>
@@ -361,7 +361,7 @@
 </div>
 </div>
 <div class="layout-cell layout-cell-9">
-<div class="layout-cell-pad-5"> Extensão universitária em Liga Acadêmica Multidisciplinar de Terapias Integrativas (LAMTI). <br class="clear">Faculdade de Medicina do ABC, FMABC, Brasil.
+<div class="layout-cell-pad-5"> Extensão universitária em Liga Acadêmica Multidisciplinar de Terapias Integrativas (LAMTI). <br class="clear">- Faculdade de Medicina do ABC, FMABC, Brasil.
 		
 	</div>
 </div>
