--- a/sobre.html
+++ b/sobre.html
@@ -140,7 +140,6 @@
                     <img class="img-fluid w-100" src="img/wellness.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
-                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">Sobre</h6>
                     <h1 class="mb-4">Sobre nós</h1>
                     <p class="pl-4 border-left border-primary">Na nossa empresa, a sua satisfação e bem-estar são nossa maior prioridade. Cada sessão é projetada para atender às suas necessidades específicas, e nossa abordagem personalizada garante que você receba os melhores resultados possíveis.
                     
@@ -176,8 +175,23 @@
 
 </div>
 </div>
+        <div class="layout-cell layout-cell-9">
+<div class="layout-cell-pad-5">Liberação Funcional Avançada.  (Carga horária: 20h). <br class="clear">- Dra Walkyria Fernandes, WF, Brasil.
+		
+	</div>
+</div>
 <div class="layout-cell layout-cell-9">
 <div class="layout-cell-pad-5">Treinamento de Coluna Vertebral, da Teoria à Prática.  (Carga horária: 12h). <br class="clear">- Instituto Fisiologic, IF, Brasil.
+		
+	</div>
+</div>
+        <div class="layout-cell layout-cell-3 text-align-right">
+<div class="layout-cell-pad-5 text-align-right">
+
+</div>
+</div>
+          <div class="layout-cell layout-cell-9">
+<div class="layout-cell-pad-5">Dry Needling.  (Carga horária: 40h). <br class="clear">- Centro Educacional Sete de Setembro, CESS, Brasil.
 		
 	</div>
 </div>
@@ -196,6 +210,17 @@
 
 </div>
 </div>
+        <div class="layout-cell layout-cell-9">
+<div class="layout-cell-pad-5">Massagem com pedras quentes.  (Carga horária: 40h). <br class="clear">- Centro Educacional Sete de Setembro, CESS, Brasil.
+		
+            </div></div>
+            <div class="layout-cell layout-cell-3 text-align-right">
+<div class="layout-cell-pad-5 text-align-right">
+
+</div>
+</div>
+
+      
 <div class="layout-cell layout-cell-9">
 <div class="layout-cell-pad-5">Auriculoterapia.  (Carga horária: 40h). <br class="clear">- Centro Educacional Sete de Setembro, CESS, Brasil.
 		
@@ -370,7 +395,7 @@
 </div>
     <h6 class="text-primary text-uppercase bg-light py-1 px-2 mt-5">Eventos, congressos, exposições e feiras</h6> 
    
-<div class="layout-cell layout-cell-1 text-align-right">
+<div class="layout-cell layout-cell-1 text-align-right" style="padding: 6px;">
 <div class="layout-cell-pad-5 text-align-right">
 <b>1. </b>
 </div>
