--- a/sobre.html
+++ b/sobre.html
@@ -161,7 +161,35 @@
                     <div class="container py-5">
                     <h1>Currículo</h1>
                     <a href="https://lattes.cnpq.br/2388059456660725" class="btn btn-primary mt-2" target="_blank">Acessar currículo atualizado</a>
-                    
+                    <h6 class="text-primary text-uppercase bg-light py-1 px-2 mt-5">Formação acadêmica</h6> 
+    <div class="layout-cell layout-cell-12 data-cell">
+<div class="layout-cell layout-cell-3 text-align-right">
+<div class="layout-cell-pad-5 text-align-right">
+
+</div>
+</div>
+
+<div class="layout-cell layout-cell-3 text-align-right">
+<div class="layout-cell-pad-5 text-align-right">
+
+</div>
+</div>
+        <div class="layout-cell layout-cell-9">
+<div class="layout-cell-pad-5">Graduação em andamento em Fisioterapia. <br class="clear">- Faculdade de Medicina do ABC, FMABC, Brasil. 2020 - 2023
+		
+	</div>
+</div>
+<div class="layout-cell layout-cell-9">
+<div class="layout-cell-pad-5">
+Graduação em Análise e Desenvolvimento de Sistemas. <br class="clear">- Faculdade Impacta de Tecnologia, FIT, Brasil. 2015 - 2017
+		
+	</div>
+</div>
+        <div class="layout-cell layout-cell-3 text-align-right">
+<div class="layout-cell-pad-5 text-align-right">
+
+</div>
+</div>
                    <h6 class="text-primary text-uppercase bg-light py-1 px-2 mt-5">Formação</h6> 
     <div class="layout-cell layout-cell-12 data-cell">
 <div class="layout-cell layout-cell-3 text-align-right">
