--- a/sobre.html
+++ b/sobre.html
@@ -190,7 +190,7 @@ Graduação em Análise e Desenvolvimento de Sistemas. <br class="clear">- Facul
 
 </div>
 </div>
-                   <h6 class="text-primary text-uppercase bg-light py-1 px-2 mt-5">Formação</h6> 
+                   <h6 class="text-primary text-uppercase bg-light py-1 px-2 mt-5">Formação complementar</h6> 
     <div class="layout-cell layout-cell-12 data-cell">
 <div class="layout-cell layout-cell-3 text-align-right">
 <div class="layout-cell-pad-5 text-align-right">
