--- a/servicos.html
+++ b/servicos.html
@@ -129,13 +129,13 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Serviços</a>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="servicos#dt" class="dropdown-item">Liberação miofascial avançada (Deep Tissue)</a>
-                            <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a>
-                            <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
-                            <a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
-                            <a href="servicos#vent" class="dropdown-item">Ventosaterapia</a>
-                            <a href="servicos#pq" class="dropdown-item">Pedras quentes</a>
-                            <a href="servicos#rolf" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
+                            <a href="#dt" class="dropdown-item">Liberação miofascial avançada (Deep Tissue)</a>
+                            <a href="#relax" class="dropdown-item">Massagem Relaxante</a>
+                            <a href="#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
+                            <a href="#dl" class="dropdown-item">Drenagem Linfática</a>
+                            <a href="#vent" class="dropdown-item">Ventosaterapia</a>
+                            <a href="#pq" class="dropdown-item">Pedras quentes</a>
+                            <a href="#rolf" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
                         </div>
                     </div>
                     
