--- a/servicos.html
+++ b/servicos.html
@@ -26,7 +26,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-    <style>html {scroll-behavior: smooth;}</style>
+    <style>html{scroll-behavior: smooth;}</style>
 </head>
 
 <body>
@@ -109,7 +109,7 @@
                 <div class="navbar-nav m-auto py-0">
                     <a href="/" class="nav-item nav-link">Home</a>
                     <a href="sobre" class="nav-item nav-link">Sobre</a>
-                    <a href="servicos" class="nav-item nav-link">Serviços</a>
+                    <!--<a href="servicos" class="nav-item nav-link">Serviços</a>-->
                     <a href="preco" class="nav-item nav-link">Preços</a>
                     <!--<div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Artigos e notícias</a>
