--- a/servicos.html
+++ b/servicos.html
@@ -127,7 +127,7 @@
 
 
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Serviços</a>
+                        <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="#dt" class="dropdown-item">Liberação miofascial avançada (Deep Tissue)</a>
                             <a href="#relax" class="dropdown-item">Massagem Relaxante</a>
@@ -135,7 +135,7 @@
                             <a href="#dl" class="dropdown-item">Drenagem Linfática</a>
                             <a href="#vent" class="dropdown-item">Ventosaterapia</a>
                             <a href="#pq" class="dropdown-item">Pedras quentes</a>
-                            <a href="#rolf" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
+                            <a href="#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
                         </div>
                     </div>
                     
@@ -356,7 +356,7 @@ A ventosaterapia pode deixar marcas temporárias na pele, conhecidas como "equim
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#rolf"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito Rolf)</a>
+                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a>
                                 <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Avançada/Deep Tissue)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
