--- a/servicos.html
+++ b/servicos.html
@@ -126,7 +126,7 @@
 
 
 
-                    <div class="nav-item dropdown">
+                    <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="#dt" class="dropdown-item">Liberação miofascial avançada (Deep Tissue)</a>
